Fix Vercel config to deploy index.js

--- a/vercel.json
+++ b/vercel.json
@@ -2,18 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/api/firestore-api/server.js",
+      "src": "api/api/firestore-api/index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/get-latest",
-      "dest": "api/api/firestore-api/server.js"
-    },
-    {
-      "src": "/device/(.*)",
-      "dest": "api/api/firestore-api/server.js"
+      "src": "/(.*)",
+      "dest": "api/api/firestore-api/index.js"
     }
   ]
 }
